@@ -17,7 +17,6 @@
 package org.apache.solr.cloud;
 
 import java.lang.invoke.MethodHandles;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -190,7 +189,7 @@ public class LeaderFailoverAfterPartitionTest extends HttpPartitionTest {
     SolrInputDocument doc = new SolrInputDocument();
     doc.addField(id, String.valueOf(6));
     doc.addField("a_t", "hello" + 6);
-    sendDocsWithRetry(testCollectionName, Collections.singletonList(doc), 1, 3, 1);
+    sendDocsWithRetry(testCollectionName, List.of(doc), 1, 3, 1);
 
     Set<String> replicasToCheck = new HashSet<>();
     for (Replica stillUp : participatingReplicas) replicasToCheck.add(stillUp.getName());
